fix(picker-column-internal): improve styling on ios (#25423)

--- a/core/src/components/picker-column-internal/picker-column-internal.scss
+++ b/core/src/components/picker-column-internal/picker-column-internal.scss
@@ -34,6 +34,9 @@
 }
 
 :host .picker-item {
+  @include padding(0);
+  @include margin(0);
+
   display: block;
 
   width: 100%;
@@ -46,9 +49,13 @@
 
   background: transparent;
 
+  color: inherit;
+
   font-size: inherit;
 
   line-height: 34px;
+
+  text-align: inherit;
 
   text-overflow: ellipsis;
 
